# plugin-translate

./: Cargo.toml  flake.nix
src/: lib.rs
